--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Hello World</h1>
 		<h2>My name is Jessie</h2>
+	    <img src="desktop/1.jpg" width="200px" height="400">
 	</body>
 </html>
