--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>Hello World</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-		<h2>My name is Jessie</h2>
+		<marquee><h1>Hello World</h1></marquee>
+		<marquee><h2>My name is Jessie</h2></marquee>
 	    <img src="desktop/1.jpg" width="200px" height="400">
 	</body>
 </html>
