--- a/tags.html
+++ b/tags.html
@@ -13,5 +13,21 @@
 			is social networking. I am a person who love making friends with
 			many people and networking with interesting strangers.
 			I think I would learn a lot in this class! </p>
+			
+		<h2> My Favorite Website </h2>
+		<ul>
+			<li>
+				<a href = " https://www.youtube.com/ " > youtube < </a>
+			</li>
+			
+			<li>
+				<a href = " https://www.wikipedia.org/ " > wikipedia < </a>
+			</li>
+			
+			<li>
+				<a href = " https://www.w3schools.com/ " > w3schools < </a>
+			</li>
+
+		</ul>
 	</body>
 </html>
