--- a/tags.html
+++ b/tags.html
@@ -17,15 +17,15 @@
 		<h2> My Favorite Website </h2>
 		<ul>
 			<li>
-				<a href = " https://www.youtube.com/ " > youtube < </a>
+				<a href = " https://www.youtube.com/ " > youtube </a>
 			</li>
 			
 			<li>
-				<a href = " https://www.wikipedia.org/ " > wikipedia < </a>
+				<a href = " https://www.wikipedia.org/ " > wikipedia </a>
 			</li>
 			
 			<li>
-				<a href = " https://www.w3schools.com/ " > w3schools < </a>
+				<a href = " https://www.w3schools.com/ " > w3schools </a>
 			</li>
 
 		</ul>
