--- a/tags.html
+++ b/tags.html
@@ -27,7 +27,13 @@
 			<li>
 				<a href = " https://www.w3schools.com/ " > w3schools </a>
 			</li>
-
 		</ul>
+		
+		<img src = "https://www.google.com/url?sa=i&source=imgres&cd=&cad=rja&uact=8&ved=2ahUKEwiOnLKyvYHlAhUUL30KHTaND3EQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.akc.org%2Fexpert-advice%2Fhealth%2Froundworms-in-dogs-symptoms-treatment-and-prevention%2F&psig=AOvVaw3-PK9-5tkA7mFpt-eD29ia&ust=1570239844221546"
+		title = "puppy dogs" style = " width : 100px; height: 100px ; margin : 3px">
+		<a href = "https://en.wikipedia.org/wiki/Cat">
+		<img src = " https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg/1024px-An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg "
+		title = "Intorduce of Cats" >
+		</a>
 	</body>
 </html>
