--- a/tags.html
+++ b/tags.html
@@ -33,7 +33,7 @@
 		title = "puppy dogs" style = " width : 100px; height: 100px ; margin : 3px">
 		<a href = "https://en.wikipedia.org/wiki/Cat">
 		<img src = " https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg/1024px-An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg "
-		title = "Intorduce of Cats" >
+		title = "Intorduce of Cats" style = " width : 80px ; height:80px;" >
 		</a>
 	</body>
 </html>
