--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>Hello World</title>
 	</head>
 	<body>
-		<marquee><h1>Hello World</h1></marquee>
-		<marquee><h2>My name is Jessie</h2></marquee>
-	    <img src="desktop/1.jpg" width="200px" height="400">
+		<h1>Hello World</h1>
+		<h2>My name is Jessie</h2>
+		<img src = "https://upload.wikimedia.org/wikipedia/commons/4/45/Dr._Seuss_WikiWorld.png"
+		style = " width : 100px; height: 100px ; margin : 3px">
 	</body>
 </html>
