--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> Jessie's Website </title>
-		<link rel = "stylesheet" href = "css/someCss.html"/ >
+		<link rel = "stylesheet" href = "css/someCss.css"/ >
 	</head>
 	<body>
 		<h1> Jessie YAN </h1>
