--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -6,6 +6,6 @@
 	<body>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/hY7m5jjJ9mM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.4972870156503!2d-122.30570858453643!3d47.655335079187886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014929d8535eb%3A0x6b742c7901b82ba3!2sUniversity%20of%20Washington!5e0!3m2!1sen!2sus!4v1570572757115!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-		https://www.usatoday.com/story/sports/columnist/josh-peter/2019/10/07/lebron-james-china-hong-kong-controversy/3903187002/
+		<iframe frameborder="0" scrolling="no" style="border:0px" src="https://books.google.com/books?id=8nm0DQAAQBAJ&ppis=_c&lpg=PP1&dq=how%20to%20upload%20news%20in%20github%20using%20html&pg=PP1&output=embed" width=500 height=500></iframe>
 	</body>
 </html>
