--- a/someCss.html
+++ b/someCss.html
@@ -5,10 +5,18 @@ body {
 
 img {
 	float: left;
-	height: 130px;
-	width: 130px;
+	height: 50px;
+	width: 50px;
 }
 
-h1 {
-	color: Violet;
+#one {
+	font-size: 10px;
+	font-family: "Passion One";
+	color: #FFBC00;
+}
+
+#two {
+	font-size: 20px
+	font-family: "Times New Roman", Times, serif;
+	color: #8E41D5;
 }
