--- a/tags.html
+++ b/tags.html
@@ -6,35 +6,21 @@
 	</head>
 	<body>
 		<h1> Jessie YAN </h1>
-		<h2> About Me </h2>
-		<p> I am from XI'AN, SHAAN XI, CHINA.
+
+		<p id="one"> <p>I am from XI'AN, SHAAN XI, CHINA.
 			I am sophomore and My intended major is Math.
 			I like singing, dancing, and any activities related to music. </p>
-		<p> I take info 101 because the topic of this class
+		<p id="two"><p> I take info 101 because the topic of this class
 			is social networking. I am a person who love making friends with
 			many people and networking with interesting strangers.
 			I think I would learn a lot in this class! </p>
 			
-		<h2> My Favorite Website </h2>
-		<ul>
-			<li>
-				<a href = " https://www.youtube.com/ " > youtube </a>
-			</li>
-			
-			<li>
-				<a href = " https://www.wikipedia.org/ " > wikipedia </a>
-			</li>
-			
-			<li>
-				<a href = " https://www.w3schools.com/ " > w3schools </a>
-			</li>
-		</ul>
 		
 		<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Collage_of_Nine_Dogs.jpg/1024px-Collage_of_Nine_Dogs.jpg"
-		title = "puppy dogs" style = " width : 100px; height: 100px ; margin : 3px">
-		<a href = "https://en.wikipedia.org/wiki/Cat">
+		title = "puppy dogs" style = " width : 50x; height: 50px;">
+		
 		<img src = " https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg/1024px-An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg "
-		title = "Intorduce of Cats" style = " width : 80px ; height:80px;" >
-		</a>
+		title = "Intorduce of Cats" style = " width : 50x ; height:50x;" >
+
 	</body>
 </html>
