--- a/tags.html
+++ b/tags.html
@@ -17,7 +17,7 @@
 			
 		
 		<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Collage_of_Nine_Dogs.jpg/1024px-Collage_of_Nine_Dogs.jpg"
-		title = "puppy dogs" style = " width : 50x; height: 50px;">
+		title = "puppy dogs" style = " width : 50px; height: 50px;">
 		
 		<img src = " https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg/1024px-An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg "
 		title = "Intorduce of Cats" style = " width : 50x ; height:50x;" >
